icons and header

--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
 
 <header>
   <ul class="menu">
-    <li><a class="menuItem" href="#/">Home</a></li>
-    <li><a class="menuItem" href="#/about-me">About</a></li>
-    <li><a class="menuItem" href="#/">Projects</a></li>
-    <li><a class="menuItem" href="#/contact">Contact</a></li>
+    <li><a class="menuItem" href="#/">Forside</a></li>
+    <li><a class="menuItem" href="#/">Dagsordener og referater</a></li>
+    <li><a class="menuItem" href="#/">Medlemmer</a></li>
+    <li><a class="menuItem" href="#/">Udvalg</a></li>
+    <li><a class="menuItem" href="#/">Kategorier</a></li>
+    <li><a class="menuItem" href="#/">Abonnement</a></li>
   </ul>
   <img src="img/AAK_01_venstrejusteret_negativ.png" alt="Kommune logo">
   <div class="hamburger">
@@ -55,38 +57,38 @@
     <article class="kort-section">
       <h3 class="open-sans-heading"> Hvad søger du?</h3>
       <div class="kort-container">
-        <div class="forside-kort"><span class="material-icons md-48">
+        <div class="forside-kort"><span class="material-icons-outlined md-48">
           content_paste_search
           </span>
           <p class="forside-kort-titel"> Dagsordener og referater</p>
         </div>
         <div class="forside-kort">
-          <span class="material-icons md-48">
+          <span class="material-icons-outlined md-48">
             groups
             </span>
             <p class="forside-kort-titel"> Byrådets medlemmer</p>
         </div>
         <div class="forside-kort">
-          <span class="material-icons md-48">
+          <span class="material-icons-outlined md-48">
             group
             </span>
             <p class="forside-kort-titel"> Udvalg</p>
         </div>
       </div>
       <div class="kort-container">
-        <div class="forside-kort"><span class=" forside-kort-icon material-icons md-48">
+        <div class="forside-kort"><span class="material-icons-outlined md-48">
           calendar_month
           </span>
           <p class="forside-kort-titel"> Mødeoversigt </p>
         </div>
         <div class="forside-kort">
-          <span class=" forside-kort-icon material-icons md-48">
+          <span class="material-icons-outlined md-48">
             source
             </span>
             <p class="forside-kort-titel"> Kategorier</p>
         </div>
         <div class="forside-kort">
-          <span class=" forside-kort-icon material-icons md-48">
+          <span class="material-icons-outlined md-48">
             mail
             </span>
             <p class="forside-kort-titel"> Abonnement</p>
@@ -181,31 +183,31 @@
       <h3 class="open-sans-heading">Aktuelle emner i kommunen</h3>
       <div class="slide-container">
         <div class="aktuelle-emner-kort">
-          <span class="material-icons md-48">
+          <span class="material-icons-outlined md-48">
             emoji_nature
             </span>
             <p class="forside-kort-titel">Natur</p>
         </div>
         <div class="aktuelle-emner-kort">
-          <span class="material-icons md-48">
+          <span class="material-icons-outlined md-48">
             family_restroom
             </span>
             <p class="forside-kort-titel">Familie</p>
         </div>
         <div class="aktuelle-emner-kort">
-          <span class="material-icons md-48">
+          <span class="material-icons-outlined md-48">
             construction
             </span>
             <p class="forside-kort-titel">Byggeri</p>
         </div>
         <div class="aktuelle-emner-kort">
-          <span class="material-icons md-48">
+          <span class="material-icons-outlined md-48">
             theater_comedy
             </span>
             <p class="forside-kort-titel">Kultur & Fritid</p>
         </div>
         <div class="aktuelle-emner-kort">
-          <span class="material-icons md-48">
+          <span class="material-icons-outlined md-48">
             payments
             </span>
             <p class="forside-kort-titel">Økonomi</p>
