--- a/index.html
+++ b/index.html
@@ -227,7 +227,15 @@
         <h1>Byrådets medlemmer</h1>
       </article>
       
-      <div class="search"> </div>
+      <div class="search input-container">
+        <label for="search" class="xsmall-text">Søg efter medlemmer</label>
+        <input type="search" placeholder="Søg" class="input" onkeyup="search(this.value)">
+      </div>
+
+      <div class="filter input-container">
+        <label for="search" class="xsmall-text">Filtre</label>
+        <input type="search" placeholder="Søg" class="input" onkeyup="search(this.value)">
+      </div>
     </section>
   
 
