--- a/index.html
+++ b/index.html
@@ -234,14 +234,14 @@
 
       <div class="filter">
                 <label for="filterParti">
-                    <select id="filterparti" onchange="filterParti(this.value)">
+                    <select id="filterParti" onchange="filterParti(this.value)">
                         <option value="all" selected>Parti</option>
-                        <option value="socialdemokratiet">Socialdemokratiet (A)</option>
-                        <option value="konservative">Konservative (C)</option>
-                        <option value="radikale-venstre">Radikale Venstre (B)</option>
-                        <option value="dansk-folkeparti">Dansk Folkeparti (O)</option>
-                        <option value="enhedslisten">Enhedslisten (Ø)</option>
-                        <option value="venstre">Venstre (V)</option>
+                        <option value="Socialdemokratiet">Socialdemokratiet (A)</option>
+                        <option value="Konservative">Konservative (C)</option>
+                        <option value="Radikale Venstre">Radikale Venstre (B)</option>
+                        <option value="Dansk Folkeparti">Dansk Folkeparti (O)</option>
+                        <option value="Enhedslisten">Enhedslisten (Ø)</option>
+                        <option value="Venstre">Venstre (V)</option>
                     </select>
                 </label>
                 <label for="filterUdvalg">
