--- a/index.html
+++ b/index.html
@@ -240,6 +240,7 @@
                         <option value="Konservative">Konservative (C)</option>
                         <option value="Radikale Venstre">Radikale Venstre (B)</option>
                         <option value="Dansk Folkeparti">Dansk Folkeparti (O)</option>
+                        <option value="Socialistisk Folkeparti">Socialistisk Folkeparti (SF)</option>
                         <option value="Enhedslisten">Enhedslisten (Ø)</option>
                         <option value="Venstre">Venstre (V)</option>
                     </select>
