--- a/index.html
+++ b/index.html
@@ -236,13 +236,13 @@
                 <label for="filterParti">
                     <select id="filterParti" onchange="filterParti(this.value)">
                         <option value="all" selected>Alle partier</option>
-                        <option value="Socialdemokratiet">Socialdemokratiet (A)</option>
-                        <option value="Konservative">Konservative (C)</option>
-                        <option value="Radikale Venstre">Radikale Venstre (B)</option>
-                        <option value="Dansk Folkeparti">Dansk Folkeparti (O)</option>
-                        <option value="Socialistisk Folkeparti">Socialistisk Folkeparti (SF)</option>
-                        <option value="Enhedslisten">Enhedslisten (Ø)</option>
-                        <option value="Venstre">Venstre (V)</option>
+                        <option value="Socialdemokratiet (A)">Socialdemokratiet (A)</option>
+                        <option value="Konservative Folkeparti (C)">Konservative Folkeparti (C)</option>
+                        <option value="Radikale Venstre (B)">Radikale Venstre (B)</option>
+                        <option value="Dansk Folkeparti (O)">Dansk Folkeparti (O)</option>
+                        <option value="Socialistisk Folkeparti (SF)">Socialistisk Folkeparti (SF)</option>
+                        <option value="Enhedslisten (Ø)">Enhedslisten (Ø)</option>
+                        <option value="Venstre (V)">Venstre (V)</option>
                     </select>
                 </label>
                 <label for="filterUdvalg">
