--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                 </label>
                 <label for="filterUdvalg">
                   <select id="filterUdvalg" onchange="filterUdvalg(this.value)">
-                      <option value="alle-udvalg" selected>Udvalg</option>
+                      <option value="all" selected>Udvalg</option>
                       <option value="boern-og-unge">Børn- og ungeudvalget</option>
                       <option value="kultur">Kulturudvalget</option>
                       <option value="social-og-beskaeftigelse">Social- og beskæftigelsesudvalget</option>
