--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
       <div class="filter-container">
                 <label for="filterParti">
                     <select id="filterParti" class="filterUI" onchange="filterParti(this.value)">
-                        <option value="all" selected>Alle partier</option>
+                        <option value="all" selected>Partier</option>
                         <option value="Socialdemokratiet (A)">Socialdemokratiet (A)</option>
                         <option value="Konservative Folkeparti (C)">Konservative Folkeparti (C)</option>
                         <option value="Radikale Venstre (B)">Radikale Venstre (B)</option>
