member details begun

--- a/index.html
+++ b/index.html
@@ -264,6 +264,11 @@
       <article id="medlemmer-container">
       </article>
     </section>
+
+  <!--member detail-->
+  <section id="member-details" class="main-container page">
+    <section id="member-details-container"></section>
+  </section>
   
 
 <!-- SPA Router functionality  -->
