--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
     </section>
 
   <!--member detail-->
-  <section id="member-details" class="main-container page">
+  <section id="medlemsprofil" class="main-container page">
     <section id="member-details-container"></section>
   </section>
   
