--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
       <div class="filter-container">
                 <label for="filterParti">
                     <select id="filterParti" class="filterUI" onchange="filterParti(this.value)">
-                        <option value="all" selected>Partier</option>
+                        <option value="all" selected>Alle partier</option>
                         <option value="Socialdemokratiet (A)">Socialdemokratiet (A)</option>
                         <option value="Konservative Folkeparti (C)">Konservative Folkeparti (C)</option>
                         <option value="Radikale Venstre (B)">Radikale Venstre (B)</option>
@@ -261,8 +261,7 @@
       </div>
     </div>
 
-      <article id="medlemmer-container">
-      </article>
+      <article id="medlemmer-container"></article>
     </section>
 
   <!--member detail-->
