--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </article>
 
     <article class="kort-section">
-      <h3 class="open-sans-heading"> Hvad søger du?</h3>
+      <h2 class="open-sans-heading"> Hvad søger du?</h2>
       <div class="kort-container">
         <div class="forside-kort"><span class="material-icons-outlined md-48">
           content_paste_search
@@ -100,7 +100,7 @@
 
     <article class="video-section">
       <div class="video-section-titel">
-      <h3 class="open-sans-heading"> Se møder</h3>
+      <h2 class="open-sans-heading"> Se møder</h2>
       <p class="xsmall-text">Se alle</p>
     </div>
     <div class="slide-container">
@@ -182,7 +182,7 @@
     </article>
 
     <article class="aktuelt-section">
-      <h3 class="open-sans-heading">Aktuelle emner i kommunen</h3>
+      <h2 class="open-sans-heading">Aktuelle emner i kommunen</h2>
       <div class="slide-container">
         <div class="aktuelle-emner-kort">
           <span class="material-icons-outlined md-48">
@@ -229,7 +229,7 @@
       
       <div class="search input-container">
         <label for="search" class="xsmall-text">Søg efter medlemmer</label>
-        <input type="search" placeholder="Søg" class="search-input" onkeyup="search(this.value)" onsearch="search('')">
+        <input type="search" placeholder="Søg" id="search" class="search-input" onkeyup="search(this.value)" onsearch="search('')">
       </div>
 
       <div class="filter-section">
