udvalg update + displayFilter

--- a/index.html
+++ b/index.html
@@ -249,18 +249,19 @@
                 </label>
                 <label for="filterUdvalg">
                   <select id="filterUdvalg" onchange="filterUdvalg(this.value)">
-                      <option value="all" selected>Udvalg</option>
-                      <option value="boern-og-unge">Børn- og ungeudvalget</option>
-                      <option value="kultur">Kulturudvalget</option>
-                      <option value="social-og-beskaeftigelse">Social- og beskæftigelsesudvalget</option>
-                      <option value="sundhed-og-omsorg">Sundheds- og omsorgsudvalget</option>
-                      <option value="teknisk">Tekniskudvalget</option>
-                      <option value="økonomi">Økonomiudvalget</option>
+                      <option value="Byrådet" selected>Alle udvalg</option>
+                      <option value="Børn- og ungeudvalget">Børn- og ungeudvalget</option>
+                      <option value="Kulturudvalget">Kulturudvalget</option>
+                      <option value="Social- og beskæftigelsesudvalget">Social- og beskæftigelsesudvalget</option>
+                      <option value="Sundheds- og omsorgsudvalget">Sundheds- og omsorgsudvalget</option>
+                      <option value="Teknikudvalget">Teknikudvalget</option>
+                      <option value="Økonomiudvalget">Økonomiudvalget</option>
                     </select>
               </label>
       </div>
     </div>
-      
+    
+    <h3 class="open-sans-heading display-filter">Alle medlemmer <span id="selected-filter"></span></h3>  
       <article id="medlemmer-container"></article>
     </section>
 
