--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
       </span> <a href ="#/medlemmer" class="small-text">Medlemmer</a> </div>
       <article class="title">
         <h1>Byrådets medlemmer</h1>
+        <p class="body-text">Her kan du søge og filtrere blandt alle medlemmer i byrådet.</p>
       </article>
       
       <div class="search input-container">
