--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <li><a class="menuItem" href="#/">Kategorier</a></li>
     <li><a class="menuItem" href="#/">Abonnement</a></li>
   </ul>
-  <img src="img/AAK_01_venstrejusteret_negativ.png" alt="Kommune logo">
+  <a href="#/"><img src="img/AAK_01_venstrejusteret_negativ.png" alt="Kommune logo"></a>
   <div class="hamburger">
     <span class=" menuIcon material-icons">menu</span>
     <span class=" closeIcon material-icons" style="display: none">
