--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
       <p class="xsmall-text">Filtre</p>
       <div class="filter-container">
                 <label for="filterParti">
-                    <select id="filterParti" class="filterUI" onchange="filterParti(this.value)">
+                    <select id="filterParti" onchange="filterParti(this.value)">
                         <option value="Byrådet" selected>Alle partier</option>
                         <option value="Socialdemokratiet (A)">Socialdemokratiet (A)</option>
                         <option value="Konservative Folkeparti (C)">Konservative Folkeparti (C)</option>
