--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Publication 2.0 Hovedopgave</title>
+  <title>Hovedopgave | Publication 2.0</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <meta name="description" content="Jakob Valentin Hovedopgave - Publication 2.0" />
+  <meta name="description" content="Jakob Valentin hovedopgave Multimediedesign Erhvervsakademi Aarhus 2022 - Publication 2.0" />
   <meta name="author" content="Jakob Valentin">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/main.css">
